# cythan-V4

./: Cargo.toml  README.md  after.mir  before.mir  morpion.cte  out - Copy.txt  out.cct  out.ct  out.mir  out.txt
Cythan-V2/: Cargo.toml
Cythan-V2/src/: cythan.rs  format.rs  lib.rs
Cythan-V2/src/implementations/: basic.rs  chunked.rs  complete.rs  interrupted.rs  mod.rs
cythan/: de.json  language-configuration.json  package.json
cythan/syntaxes/: cythan.tmLanguage.json
errors/: Cargo.toml
errors/src/: lib.rs  mirrors.rs  reporting.rs  wrappers.rs
lir/: Cargo.toml
lir/src/: instruction.rs  label.rs  lib.rs  number.rs  optimizer.rs  value.rs  var.rs
mir/: Cargo.toml
mir/src/: block.rs  interpreter.rs  lib.rs  mir.rs  skip_status.rs  state.rs
mir/src/no/: mod.rs
mir/src/optimizer/: block_inliner.rs  get_reads.rs  get_writes.rs  mod.rs  new_opt.rs  old.rs  optimize.rs  state.rs
src/: gramar.pest  main.rs
src/actions/: build_context.rs  mod.rs  run_context.rs  test_context.rs
src/actions/natives/: array.rs  mod.rs  system.rs  val.rs
src/compiler/: asm.rs  asm_interpreter.rs  class_loader.rs  compiler.rs  compiler_states.rs  mir.rs  mod.rs  template.rs
src/errors/: mirrors.rs  mod.rs  reporting.rs
src/mir_utils/: block_inliner.rs  mod.rs
src/parser/: annotation.rs  class.rs  expression.rs  field.rs  method.rs  mod.rs  token_utils.rs  ty.rs
src/tests/: mod.rs
std/: Array.ct  Bool.ct  Byte.ct  Counter.ct  DynArray.ct  Morpion.ct  N0.ct  N1.ct  N2.ct  N3.ct  Option  Option.ct  Pendu.ct  Pendu1.ct  System.ct  UnitTests.ct  Val.ct
(+12 files in other folders)
