[package]
name = "cythan-v4"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# pest = { path = "../pest/pest" }
# pest_derive = { path = "../pest/derive" }
either = "*"
cythan-compiler = { git = "https://github.com/Cythan-Project/cythan-compiler" }
cythan = { path = "Cythan-V2" }
ariadne = "0.1.3"
strsim = "0.10.0"
