[package]
name = "cythan-v4"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "*"
lir = { path = "lir" }
mir = { path = "mir" }
cythan = { path = "Cythan-V2" }
ariadne = "0.1.3"
strsim = "0.10.0"

[workspace]
members = ["lir", "Cythan-V2", "mir"]
