[package]
name = "cythan-v4"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "*"
lir = { path = "lir" }
mir = { path = "mir" }
errors = { path = "errors" }
cythan = { path = "Cythan-V2" }

[profile.release]
debug = true

[workspace]
members = ["lir", "Cythan-V2", "mir","errors"]
